--- a/user/biasa/courses/my-courses.html
+++ b/user/biasa/courses/my-courses.html
@@ -239,9 +239,9 @@
                                     style="width: 100%"></div>
                             </div>
                         </div>
-                        <button
-                            class="w-full bg-emerald-600 text-white py-2.5 rounded-lg font-semibold hover:bg-emerald-700 transition-colors">Lihat
-                            Detail Kursus</button>
+                        <a href="course-detail-ptk-makro.html"
+                            class="block w-full bg-emerald-600 text-white py-2.5 rounded-lg font-semibold hover:bg-emerald-700 transition-colors text-center">Lihat
+                            Detail Kursus</a>
                     </div>
                 </div>
 
@@ -266,9 +266,9 @@
                                     style="width: 100%"></div>
                             </div>
                         </div>
-                        <button
-                            class="w-full bg-emerald-600 text-white py-2.5 rounded-lg font-semibold hover:bg-emerald-700 transition-colors">Lihat
-                            Detail Kursus</button>
+                        <a href="course-detail-ptk-mikro.html"
+                            class="block w-full bg-emerald-600 text-white py-2.5 rounded-lg font-semibold hover:bg-emerald-700 transition-colors text-center">Lihat
+                            Detail Kursus</a>
                     </div>
                 </div>
 
