--- a/kab-kota/report/index.html
+++ b/kab-kota/report/index.html
@@ -252,7 +252,9 @@
                             <th>No</th>
                             <th>Nama</th>
                             <th>Kursus</th>
+                            <th>Instansi</th>
                             <th>Status</th>
+                            <th>Aksi</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -308,41 +310,49 @@
 
         // Course enrollment data
         const courseData = [
-            { nama: 'Ahmad Wijaya', kursus: 'Dasar-Dasar Ketenagakerjaan', status: 'Selesai' },
-            { nama: 'Siti Nurhaliza', kursus: 'Hukum Ketenagakerjaan', status: 'Sedang berlangsung' },
-            { nama: 'Budi Santoso', kursus: 'K3 (Kesehatan dan Keselamatan Kerja)', status: 'Selesai' },
-            { nama: 'Dewi Lestari', kursus: 'Manajemen SDM', status: 'Sedang berlangsung' },
-            { nama: 'Rudi Hartono', kursus: 'Hubungan Industrial', status: 'Selesai' },
-            { nama: 'Maya Sari', kursus: 'Dasar-Dasar Ketenagakerjaan', status: 'Sedang berlangsung' },
-            { nama: 'Hendra Pratama', kursus: 'Pengupahan dan Jaminan Sosial', status: 'Selesai' },
-            { nama: 'Rina Kusuma', kursus: 'Hukum Ketenagakerjaan', status: 'Sedang berlangsung' },
-            { nama: 'Bambang Suryanto', kursus: 'K3 (Kesehatan dan Keselamatan Kerja)', status: 'Selesai' },
-            { nama: 'Andi Firmansyah', kursus: 'Manajemen SDM', status: 'Sedang berlangsung' },
-            { nama: 'Putri Wulandari', kursus: 'Hubungan Industrial', status: 'Selesai' },
-            { nama: 'Agus Setiawan', kursus: 'Pengupahan dan Jaminan Sosial', status: 'Sedang berlangsung' },
-            { nama: 'Linda Marlina', kursus: 'Dasar-Dasar Ketenagakerjaan', status: 'Selesai' },
-            { nama: 'Dian Sastro', kursus: 'Hukum Ketenagakerjaan', status: 'Sedang berlangsung' },
-            { nama: 'Teguh Prasetyo', kursus: 'K3 (Kesehatan dan Keselamatan Kerja)', status: 'Selesai' },
-            { nama: 'Ratna Sari', kursus: 'Manajemen SDM', status: 'Sedang berlangsung' },
-            { nama: 'Fajar Ramadhan', kursus: 'Hubungan Industrial', status: 'Selesai' },
-            { nama: 'Indah Permata', kursus: 'Pengupahan dan Jaminan Sosial', status: 'Sedang berlangsung' },
-            { nama: 'Rizki Maulana', kursus: 'Dasar-Dasar Ketenagakerjaan', status: 'Selesai' },
-            { nama: 'Nurul Hidayah', kursus: 'Hukum Ketenagakerjaan', status: 'Sedang berlangsung' }
+            { nama: 'Ahmad Wijaya', kursus: 'Dasar-Dasar Ketenagakerjaan', instansi: 'PT Maju Bersama', status: 'Selesai' },
+            { nama: 'Siti Nurhaliza', kursus: 'Hukum Ketenagakerjaan', instansi: 'Dinas Tenaga Kerja Jakarta', status: 'Selesai' },
+            { nama: 'Budi Santoso', kursus: 'K3 (Kesehatan dan Keselamatan Kerja)', instansi: 'PT Karya Sejahtera', status: 'Selesai' },
+            { nama: 'Dewi Lestari', kursus: 'Manajemen SDM', instansi: 'PT Indah Pratama', status: 'Selesai' },
+            { nama: 'Rudi Hartono', kursus: 'Hubungan Industrial', instansi: 'PT Cahaya Abadi', status: 'Selesai' },
+            { nama: 'Maya Sari', kursus: 'Dasar-Dasar Ketenagakerjaan', instansi: 'Dinas Tenaga Kerja Bandung', status: 'Selesai' },
+            { nama: 'Hendra Pratama', kursus: 'Pengupahan dan Jaminan Sosial', instansi: 'PT Sinar Harapan', status: 'Selesai' },
+            { nama: 'Rina Kusuma', kursus: 'Hukum Ketenagakerjaan', instansi: 'PT Mitra Usaha', status: 'Selesai' },
+            { nama: 'Bambang Suryanto', kursus: 'K3 (Kesehatan dan Keselamatan Kerja)', instansi: 'PT Jaya Konstruksi', status: 'Selesai' },
+            { nama: 'Andi Firmansyah', kursus: 'Manajemen SDM', instansi: 'PT Berkah Sentosa', status: 'Selesai' },
+            { nama: 'Putri Wulandari', kursus: 'Hubungan Industrial', instansi: 'Dinas Tenaga Kerja Surabaya', status: 'Selesai' },
+            { nama: 'Agus Setiawan', kursus: 'Pengupahan dan Jaminan Sosial', instansi: 'PT Nusantara Sejahtera', status: 'Selesai' },
+            { nama: 'Linda Marlina', kursus: 'Dasar-Dasar Ketenagakerjaan', instansi: 'PT Global Indonesia', status: 'Selesai' },
+            { nama: 'Dian Sastro', kursus: 'Hukum Ketenagakerjaan', instansi: 'PT Mandiri Jaya', status: 'Selesai' },
+            { nama: 'Teguh Prasetyo', kursus: 'K3 (Kesehatan dan Keselamatan Kerja)', instansi: 'PT Prima Karya', status: 'Selesai' },
+            { nama: 'Ratna Sari', kursus: 'Manajemen SDM', instansi: 'Dinas Tenaga Kerja Semarang', status: 'Selesai' },
+            { nama: 'Fajar Ramadhan', kursus: 'Hubungan Industrial', instansi: 'PT Angkasa Pura', status: 'Selesai' },
+            { nama: 'Indah Permata', kursus: 'Pengupahan dan Jaminan Sosial', instansi: 'PT Cemerlang Abadi', status: 'Selesai' },
+            { nama: 'Rizki Maulana', kursus: 'Dasar-Dasar Ketenagakerjaan', instansi: 'PT Tiga Pilar', status: 'Selesai' },
+            { nama: 'Nurul Hidayah', kursus: 'Hukum Ketenagakerjaan', instansi: 'Dinas Tenaga Kerja Medan', status: 'Selesai' }
         ];
 
         // Transform data for DataTable
         const tableData = courseData.map((item, index) => {
-            const statusBadge = item.status === 'Selesai'
-                ? `<span class="px-3 py-1 text-xs font-semibold text-green-800 bg-green-100 rounded-full">Selesai</span>`
-                : `<span class="px-3 py-1 text-xs font-semibold text-blue-800 bg-blue-100 rounded-full">Sedang berlangsung</span>`;
+            const statusBadge = `<span class="px-3 py-1 text-xs font-semibold text-green-800 bg-green-100 rounded-full">Selesai</span>`;
+            
+            const actionButton = `<button onclick="lihatSertifikat('${item.nama}')" class="px-3 py-1 text-xs font-medium text-white bg-indigo-600 rounded hover:bg-indigo-700">Lihat Sertifikat</button>`;
 
             return [
                 index + 1,
                 item.nama,
                 item.kursus,
-                statusBadge
+                item.instansi,
+                statusBadge,
+                actionButton
             ];
         });
+
+        // Function to view certificate
+        function lihatSertifikat(nama) {
+            alert('Menampilkan sertifikat untuk: ' + nama);
+            // Implement actual certificate viewing logic here
+        }
 
         // Initialize DataTable with export buttons
         $(document).ready(function () {
@@ -350,14 +360,14 @@
                 data: tableData,
                 pageLength: 10,
                 lengthMenu: [[10, 25, 50, -1], [10, 25, 50, "Semua"]],
-                dom: '<"row mb-3"<"col-sm-6"l><"col-sm-6"f>><"row mb-3"<"col-sm-12"B>>rtip',  // Row1: length+search, Row2: buttons
+                dom: '<"row mb-3"<"col-sm-6"l><"col-sm-6"f>><"row mb-3"<"col-sm-12"B>>rtip',
                 buttons: [
                     {
                         extend: 'excelHtml5',
                         text: '<svg class="w-4 h-4 inline mr-1" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 10v6m0 0l-3-3m3 3l3-3m2 8H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"/></svg> Excel',
                         title: 'Report Kursus',
                         exportOptions: {
-                            columns: [0, 1, 2, 3]
+                            columns: [0, 1, 2, 3, 4]
                         }
                     },
                     {
@@ -365,7 +375,7 @@
                         text: '<svg class="w-4 h-4 inline mr-1" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 21h10a2 2 0 002-2V9.414a1 1 0 00-.293-.707l-5.414-5.414A1 1 0 0012.586 3H7a2 2 0 00-2 2v14a2 2 0 002 2z"/></svg> PDF',
                         title: 'Report Kursus',
                         exportOptions: {
-                            columns: [0, 1, 2, 3]
+                            columns: [0, 1, 2, 3, 4]
                         }
                     },
                     {
@@ -373,7 +383,7 @@
                         text: '<svg class="w-4 h-4 inline mr-1" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 17h2a2 2 0 002-2v-4a2 2 0 00-2-2H5a2 2 0 00-2 2v4a2 2 0 002 2h2m2 4h6a2 2 0 002-2v-4a2 2 0 00-2-2H9a2 2 0 00-2 2v4a2 2 0 002 2zm8-12V5a2 2 0 00-2-2H9a2 2 0 00-2 2v4h10z"/></svg> Print',
                         title: 'Report Kursus',
                         exportOptions: {
-                            columns: [0, 1, 2, 3]
+                            columns: [0, 1, 2, 3, 4]
                         }
                     }
                 ],
@@ -392,11 +402,12 @@
                     zeroRecords: "Tidak ada data yang ditemukan",
                     emptyTable: "Tidak ada data tersedia"
                 },
-                order: [[0, 'asc']]
+                order: [[0, 'asc']],
+                columnDefs: [
+                    { orderable: false, targets: 5 }
+                ]
             });
         });
-
-
     </script>
 </body>
 
