--- a/user/tim/draft.html
+++ b/user/tim/draft.html
@@ -177,8 +177,8 @@
                             </svg>
                             <span class="flex-1 ms-3 whitespace-nowrap">Perhitungan</span>
                         </div>
-                        <svg class="w-3 h-3 transition-transform dropdown-arrow" fill="none" stroke="currentColor"
-                            viewBox="0 0 10 6">
+                        <svg class="w-3 h-3 transition-transform dropdown-arrow rotate-180" fill="none"
+                            stroke="currentColor" viewBox="0 0 10 6">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4" />
                         </svg>
                     </button>
@@ -186,13 +186,13 @@
                         <li>
                             <a href="./perhitungan.html"
                                 class="flex items-center w-full px-2 py-1.5 ps-10 text-gray-500 hover:bg-purple-100 hover:text-indigo-600 rounded-lg transition-colors">
-                                Daftar
+                                Kalkulator RTK
                             </a>
                         </li>
                         <li>
                             <a href="./draft.html"
                                 class="flex items-center w-full px-2 py-1.5 ps-10 text-indigo-600 bg-purple-100 rounded-lg transition-colors">
-                                Draft
+                                Draft RTK
                             </a>
                         </li>
                     </ul>
