--- a/user/tim/perhitungan.html
+++ b/user/tim/perhitungan.html
@@ -203,12 +203,13 @@
                 <li>
                     <a href="#"
                         class="flex items-center px-2 py-1.5 text-gray-500 rounded-lg hover:bg-purple-100 hover:text-indigo-600 transition-colors group">
-                        <svg class="shrink-0 w-5 h-5 transition duration-75" aria-hidden="true"
-                            xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                        <svg class="shrink-0 w-5 h-5 transition duration-75 group-hover:text-indigo-600"
+                            aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"
+                            viewBox="0 0 24 24">
                             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M4 14 12 8l8 6M4 8l8-6 8 6M4 20l8-6 8 6" />
+                                d="M10 6H5a2 2 0 0 0-2 2v9a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V8a2 2 0 0 0-2-2h-5m-4 0V5a2 2 0 1 1 4 0v1m-4 0a2 2 0 1 0 4 0m-5 8a2 2 0 1 0 0-4 2 2 0 0 0 0 4Zm0 0c1.306 0 2.417.835 2.83 2M9 14a3.001 3.001 0 0 0-2.83 2M15 11h3m-3 4h2" />
                         </svg>
-                        <span class="flex-1 ms-3 whitespace-nowrap">Penyusunan</span>
+                        <span class="flex-1 ms-3 whitespace-nowrap">Project</span>
                     </a>
                 </li>
                 <li>
@@ -223,8 +224,8 @@
                             </svg>
                             <span class="flex-1 ms-3 whitespace-nowrap">Perhitungan</span>
                         </div>
-                        <svg class="w-3 h-3 transition-transform dropdown-arrow" fill="none" stroke="currentColor"
-                            viewBox="0 0 10 6">
+                        <svg class="w-3 h-3 transition-transform dropdown-arrow rotate-180" fill="none"
+                            stroke="currentColor" viewBox="0 0 10 6">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4" />
                         </svg>
                     </button>
@@ -232,13 +233,13 @@
                         <li>
                             <a href="./perhitungan.html"
                                 class="flex items-center w-full px-2 py-1.5 ps-10 text-indigo-600 bg-purple-100 rounded-lg transition-colors">
-                                Daftar
+                                Kalkulator RTK
                             </a>
                         </li>
                         <li>
                             <a href="./draft.html"
                                 class="flex items-center w-full px-2 py-1.5 ps-10 text-gray-500 hover:bg-purple-100 hover:text-indigo-600 rounded-lg transition-colors">
-                                Draft
+                                Draft RTK
                             </a>
                         </li>
                     </ul>
