--- a/user/biasa/courses/my-courses.html
+++ b/user/biasa/courses/my-courses.html
@@ -229,10 +229,9 @@
                             <span class="text-xs text-gray-500">100%</span>
                         </div>
                         <h3 class="font-bold text-gray-900 mb-2 text-lg">Perencanaan Tenaga Kerja Makro</h3>
-                        <p class="text-sm text-gray-600 mb-4">Dr. Ahmad Suryadi</p>
                         <div class="mb-4">
                             <div class="flex justify-between text-xs text-gray-500 mb-1">
-                                <span>15 dari 15 materi</span>
+                                <span>8 dari 8 modul</span>
                             </div>
                             <div class="w-full bg-gray-200 rounded-full h-2">
                                 <div class="bg-emerald-600 h-2 rounded-full transition-all duration-300"
@@ -256,10 +255,9 @@
                             <span class="text-xs text-gray-500">100%</span>
                         </div>
                         <h3 class="font-bold text-gray-900 mb-2 text-lg">Perencanaan Tenaga Kerja Mikro</h3>
-                        <p class="text-sm text-gray-600 mb-4">Prof. Siti Rahayu</p>
                         <div class="mb-4">
                             <div class="flex justify-between text-xs text-gray-500 mb-1">
-                                <span>12 dari 12 materi</span>
+                                <span>8 dari 8 modul</span>
                             </div>
                             <div class="w-full bg-gray-200 rounded-full h-2">
                                 <div class="bg-emerald-600 h-2 rounded-full transition-all duration-300"
@@ -281,17 +279,16 @@
                             <span
                                 class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-semibold bg-purple-100 text-indigo-600">Sedang
                                 Berjalan</span>
-                            <span class="text-xs text-gray-500">45%</span>
+                            <span class="text-xs text-gray-500">33%</span>
                         </div>
                         <h3 class="font-bold text-gray-900 mb-2 text-lg">Indeks Pembangunan Ketenagakerjaan</h3>
-                        <p class="text-sm text-gray-600 mb-4">Ir. Budi Permana</p>
                         <div class="mb-4">
                             <div class="flex justify-between text-xs text-gray-500 mb-1">
-                                <span>9 dari 20 materi</span>
+                                <span>1 dari 3 modul</span>
                             </div>
                             <div class="w-full bg-gray-200 rounded-full h-2">
                                 <div class="bg-indigo-600 h-2 rounded-full transition-all duration-300"
-                                    style="width: 45%"></div>
+                                    style="width: 33%"></div>
                             </div>
                         </div>
                         <a href="course-learning.html"
@@ -310,17 +307,16 @@
                             <span
                                 class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-semibold bg-purple-100 text-indigo-600">Sedang
                                 Berjalan</span>
-                            <span class="text-xs text-gray-500">30%</span>
+                            <span class="text-xs text-gray-500">25%</span>
                         </div>
                         <h3 class="font-bold text-gray-900 mb-2 text-lg">Perencanaan Tenaga Kerja Makro (Advanced)</h3>
-                        <p class="text-sm text-gray-600 mb-4">Dr. Rina Anggraeni</p>
                         <div class="mb-4">
                             <div class="flex justify-between text-xs text-gray-500 mb-1">
-                                <span>6 dari 20 materi</span>
+                                <span>2 dari 8 modul</span>
                             </div>
                             <div class="w-full bg-gray-200 rounded-full h-2">
                                 <div class="bg-indigo-600 h-2 rounded-full transition-all duration-300"
-                                    style="width: 30%"></div>
+                                    style="width: 25%"></div>
                             </div>
                         </div>
                         <a href="course-learning.html"
@@ -342,10 +338,9 @@
                             <span class="text-xs text-gray-500">25%</span>
                         </div>
                         <h3 class="font-bold text-gray-900 mb-2 text-lg">Perencanaan Tenaga Kerja Mikro (Advanced)</h3>
-                        <p class="text-sm text-gray-600 mb-4">dr. Hendra Kusuma</p>
                         <div class="mb-4">
                             <div class="flex justify-between text-xs text-gray-500 mb-1">
-                                <span>5 dari 20 materi</span>
+                                <span>2 dari 8 modul</span>
                             </div>
                             <div class="w-full bg-gray-200 rounded-full h-2">
                                 <div class="bg-indigo-600 h-2 rounded-full transition-all duration-300"
@@ -367,18 +362,17 @@
                             <span
                                 class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-semibold bg-purple-100 text-indigo-600">Sedang
                                 Berjalan</span>
-                            <span class="text-xs text-gray-500">15%</span>
+                            <span class="text-xs text-gray-500">0%</span>
                         </div>
                         <h3 class="font-bold text-gray-900 mb-2 text-lg">Indeks Pembangunan Ketenagakerjaan (Advanced)
                         </h3>
-                        <p class="text-sm text-gray-600 mb-4">Prof. Dewi Kartini</p>
                         <div class="mb-4">
                             <div class="flex justify-between text-xs text-gray-500 mb-1">
-                                <span>3 dari 20 materi</span>
+                                <span>0 dari 3 modul</span>
                             </div>
                             <div class="w-full bg-gray-200 rounded-full h-2">
                                 <div class="bg-indigo-600 h-2 rounded-full transition-all duration-300"
-                                    style="width: 15%"></div>
+                                    style="width: 0%"></div>
                             </div>
                         </div>
                         <a href="course-learning.html"
