--- a/portal-dashboard.html
+++ b/portal-dashboard.html
@@ -173,7 +173,7 @@
                 </a>
 
                 <!-- User Biasa -->
-                <a href="user/index.html"
+                <a href="user/instansi.html"
                     class="card-dashboard bg-white rounded-2xl p-8 shadow-md border border-slate-200 hover:border-gray-300 group animate-fade-in"
                     style="animation-delay: 0.5s;">
                     <div class="flex flex-col items-center text-center space-y-4">
