--- a/user/biasa/courses/course-detail-ptk-makro.html
+++ b/user/biasa/courses/course-detail-ptk-makro.html
@@ -57,7 +57,7 @@
             </a>
 
             <!-- Course Header -->
-            <div class="bg-gradient-to-r from-indigo-600 to-purple-600 rounded-lg p-8 text-white mb-6">
+            <div class="bg-gradient-to-r from-emerald-600 to-teal-600 rounded-lg p-8 text-white mb-6">
                 <div class="flex items-start justify-between">
                     <div class="flex-1">
                         <span
@@ -87,7 +87,7 @@
                         <h2 class="text-lg font-bold text-gray-900 mb-4">🏆 Sertifikat Anda</h2>
                         <div class="relative mb-4">
                             <img src="https://picsum.photos/seed/cert-macro/400/300" alt="Certificate"
-                                class="w-full rounded-lg border-4 border-indigo-100">
+                                class="w-full rounded-lg border-4 border-emerald-100">
                             <div
                                 class="absolute top-2 right-2 bg-emerald-500 text-white px-2 py-1 rounded text-xs font-semibold">
                                 Verified
@@ -104,7 +104,7 @@
                             </div>
                         </div>
                         <button onclick="downloadCertificate()"
-                            class="w-full bg-indigo-600 text-white py-2.5 rounded-lg font-semibold hover:bg-indigo-700 transition-colors flex items-center justify-center gap-2">
+                            class="w-full bg-emerald-600 text-white py-2.5 rounded-lg font-semibold hover:bg-emerald-700 transition-colors flex items-center justify-center gap-2">
                             <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                     d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4" />
